--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>travel</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="col-lg-6 col-sm-6" >
-              <img  class="rasim col-lg-6 col-sm-6 " src="./pexels-pavel-danilyuk-6073182.jpg" alt="bez">
+              <img  class="rasim col-lg-6 col-sm-6 " src="./css/pexels-pavel-danilyuk-6073182.jpg" alt="bez">
             </div>
 
           </div>
@@ -78,11 +78,11 @@
         </div>
       </div>
       <div class="col-lg-6 col-sm-6 mt-5">
-        <img class="surat" src="./efil.jpeg" alt="" srcset="">
+        <img class="surat" src="./css/efil.jpeg" alt="" srcset="">
       </div>
 
       <div class="col-lg-6 col-sm-6 mt-5 ">
-        <img class="surat" src="./qoya_uy.jpeg" alt="" srcset="">
+        <img class="surat" src="./css/qoya_uy.jpeg" alt="" srcset="">
       </div>
       <div class="col-lg-6 col-sm-6 ">
         <div class="izoh">
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="col-lg-6 col-sm-6 ">
-        <img class="surat" src="./tegirmon.jpeg" alt="" srcset="">
+        <img class="surat" src="./css/tegirmon.jpeg" alt="" srcset="">
       </div>
 
       <div class=" row footer1 box3">
